Adjusted repository to java 8